web/wp-content/plugins/mhm_customize_twentyseventeen/Foundation/src/assets/scss/components/_sponsors.scss
$gold:      #cfb53b;
$silver:    silver;
$bronze:    #8c7853;

.wcorg-sponsors {

    // https://github.com/WPSwitzerland/wordcampbern2017/issues/7
    background: #fff;
    box-shadow: -750px 0 0 0 #fff, 750px 0 0 0 #fff; /* left/right overflow */

    h2 {
        padding: 1rem 0;
        margin: 2rem 0;
    }

    h3 {
        display: none;
    }

    .wcorg-sponsor-level-gold {
        h2 {
            color: $gold !important;
            border-bottom: .25rem solid $gold;
        }
    }

    .wcorg-sponsor-level-silver {
        font-size: 90%;
        h2 {
            color: $silver !important;
            border-bottom: .25rem solid $silver;
        }
    }

    .wcorg-sponsor-level-bronze {
        font-size: 85%;
        h2 {
            color: $bronze !important;
            border-bottom: .25rem solid $bronze;
        }
    }

    .wcorg-sponsor-level-micro h2 {
        border-bottom: .25rem solid $primary-color;
    }

    @include breakpoint(medium){

        .wcorg-sponsor:after {
            content: '';
            display: table;
            clear: both;
        }

        .wcorg-sponsor-description {

            text-align: center;

            a img {
                box-shadow: none;
            }

            > a, > img {
                float: left;
                width: 30%;
            }
            > a img {
                float: none;
                width: auto;
                max-height: 3.875rem;
            }
            > *:not(a):not(img){
                margin-left: 35%;
            }
        }

        .wcorg-sponsor-level-silver .wcorg-sponsor-description {
            > a, > img {
                width: 25%;
            }
            > a img {
                width: auto;
            }
        }

        .wcorg-sponsor-level-bronze .wcorg-sponsor-description {
            > a, > img {
                width: 22.5%;
            }
            > a img {
                width: auto;
            }
        }

        .wcorg-sponsor-level-micro {
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
            h2 {
                flex-basis: 100%;
            }
            .wcorg-sponsor {
                flex-basis: 50%;
                margin: 0 1rem 0 0;
                &:nth-child(2n){
                    margin: 0 0 0 1rem;
                }
            }
            .wcorg-sponsor-description {
                > a, > img {
                    width: 100%;
                    float: none;
                }
            }
        }
    }

}

.home .wcorg-sponsors {
    .wcorg-sponsor-description {
        > img, > a {
            float: none;
            width: auto;
        }
        > *:not(img):not(a){
            display: none;
        }
    }

    @include breakpoint(medium){
        [class*="wcorg-sponsor-level"] {
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
            align-items: center;
            .wcorg-sponsor {
                flex-basis: 46%;
                display: flex;
                align-items: center;
                margin-bottom: 1rem;
            }
            h2 {
                flex-basis: 100%;
            }
        }
        .wcorg-sponsor-level-bronze {
            .wcorg-sponsor {
                flex-basis: 32%;
            }
        }
        .wcorg-sponsor-level-micro {
            .wcorg-sponsor {
                flex-basis: 24%;
            }
        }
    }
}

